feat: 项目扩展验收与流程优化